@@ -32,9 +32,14 @@ Maintainer(s):
 CHANGELOG.txt to track changes to the Omega theme.
 
 ##########################################################################################
-##### Current Release: 7.x-3.0-beta1
+##### Current Release: 7.x-3.0-beta2
 ##### Pending changes for Next Release
 ########################################################################################## 
+
+
+6/28/11
+=========
+#1202708  - Fix inline display of field labels.
 
 ##########################################################################################
 ##### Changes in: 7.x-3.0-beta1
